data/all_generated_tests/raw_wast_tests/nop_StackCorruption_92.wast
;; 3. **Test Description**: Perform a series of arithmetic operations interleaved with the `nop` instruction. Evaluate whether the contents of the stack maintain the expected values after each arithmetic operation, ensuring `nop` does not inadvertently consume or produce values.

(assert_invalid
  (module
    (func $test
      (i32.const 42)
      (nop)
      (f32.const 3.14)
      (nop)
      (i32.add)
    )
  )
  "type mismatch"
)